Update maven build